--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,12 @@ logging.level.root=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{36} - %msg%n
 
 
+### Mail ###
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=maryem.sanheji@esprit.tn
+spring.mail.password=13265894
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
